kubernetes/apps/garmin-ingest/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garmin-ingest-ingress
  namespace: garmin-ingest
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - garmin.klexify.io
      secretName: garmin-ingest-tls
  rules:
    - host: garmin.klexify.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
